create loan method added
